# CleanMyLinux

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  app.toml  index.html  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: cleanmylinux.desktop  com.betterlinux.cleanmylinux.policy
docs/: architecture.md
docs/plans/: DECISION_ENGINE.md  PROJECT_OVERVIEW.md  UI_UX_OVERVIEW.md
docs/releases/: v1.0.0.md
ml/app_classifier/: train.py
ml/app_classifier/models/: app_classifier.json  (+1 more)
ml/progress_model/: train.py
scripts/: cleanmylinux-helper.sh  post-build.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: progress_model_weights.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: app_classifier.rs  features.rs  mod.rs  progress_model.rs
src-tauri/src/system_info/: mod.rs  ops.rs  scanners.rs  sudo.rs  types.rs  updates.rs  usage.rs  utils.rs
src-tauri/src/system_info/commands/: get_available_updates.rs  get_installed_apps.rs  mod.rs  run_app_updates.rs  uninstall_app.rs
src/components/: Header.tsx  Layout.tsx  OperationsQueue.tsx  Sidebar.tsx  TitleBar.tsx
src/context/: ConfigContext.tsx
src/store/: useAppStore.ts  useOperationsStore.ts
src/views/: AppManagerView.tsx  Dashboard.tsx  SettingsView.tsx  SystemJunkView.tsx
www/: astro.config.mjs  package.json
www/public/: robots.txt
www/src/: globals.css
(+25 files in other folders)
